--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{Put the task name here}}</title>
+  <title>Bose</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>{{Put the task name here}}</h1>
+  <h1>Bose products landing</h1>
   <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
