--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,37 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>Bose products landing</h1>
+  <div class="body">
+
+    <h1 class="heading">Browse Bose products by category</h1>
+
+    <div class="image">
+      <img src="./images/bose-earbuds.png" class="picture1" alt="image" />
+
+      <img src="./images/bose-headphones.png" class="picture2" alt="image" />
+
+      <div class="picture-title">Headphones & earbuds</div>
+    </div>
+
+    <div class="image">
+      <img src="./images/bose-speaker-usage.png" class="picture1" alt="image" />
+
+      <img src="./images/bose-speaker.png" class="picture2" alt="image" />
+
+      <div class="picture-title">Speakers</div>
+    </div class="picture-title">
+
+    <div class="image">
+      <img src="./images/bose-man-sunglasses.png" class="picture2" alt="image" />
+
+      <img src="./images/bose-girl-sunglasses.png" class="picture1" alt="image" />
+
+      <div class="picture-title">Audio sunglasses</div>
+    </div class="picture-title">
+
+    <button class="button">View all</button>
+
+  </div>
   <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
